--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -22,7 +23,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "server": "json-server ./__json_server_mock__/db.json --watch -p 3001",
+    "commit": "git cz"
   },
   "eslintConfig": {
     "extends": [
@@ -45,12 +48,19 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^13.2.0",
+    "cz-conventional-changelog": "3.3.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": ">=6",
+    "json-server": "^0.17.0",
     "lint-staged": ">=10",
     "prettier": "2.4.1"
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
