--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^13.2.0",
+    "@types/qs": "^6.9.7",
     "cz-conventional-changelog": "3.3.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": ">=6",
